--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap');
+
+/* :root {
   --background: #ffffff;
   --foreground: #171717;
 }
@@ -12,10 +14,43 @@
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+}*/
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Poppins', sans-serif;
+}
+
+@layer base {
+  .active-tag {
+    @apply underline
+  }
+
+  .header-tag {
+    @apply underline-offset-[6px] decoration-1
+  }
+
+}
+
+@layer components {
+
+  .header-tag {
+    position: relative;
+  }
+
+  .header-tag::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 1px;
+    width: 100%;
+    background-color: #000000;
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 0.3s ease-in-out;
+  }
+
+  .header-tag:hover::after {
+    transform: scaleX(1);
+  }
 }
